Fixed the jlink and native building